--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,4 @@
-VITE_APP_API_URL=https://we-tap-back.webtm.ru
+VITE_APP_API_URL=https://wewetap.com
 
 VITE_APP_PROJECT_NAME=wewetap
 VITE_APP_PROJECT_FAVICON=logo.svg
